Fix ugly overflow of pre tag

--- a/static/custom.css
+++ b/static/custom.css
@@ -228,10 +228,16 @@ div {
 
 pre {
   margin: 0;
+  font-size: 12px;
   line-height: 16px;
   font-family: Ubuntu Mono;
   font-size: medium;
-  overflow-wrap: break-word;
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+/*  overflow-wrap: break-word;*/
 }
 
 .wraptext {
